<resources>
    <string name="app_name">GO SOPT Android</string>
    <string name="welcome_to_go_android">Welcome to GO Android !</string>
    <string name="id">ID</string>
    <string name="id_hint">아이디를 입력하세요.</string>
    <string name="pw">PW</string>
    <string name="pw_hint">비밀번호를 입력하세요.</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">이름</string>
    <string name="name_hint">이름을 입력하세요.</string>
    <string name="specialty">특기</string>
    <string name="specialty_hint">특기를 입력하세요.</string>
    <string name="sign_up_complete">회원가입 완료</string>
    <string name="sign_up_completed">회원가입이 완료되었습니다.</string>
    <string name="sign_up_failed">회원가입이 실패하였습니다.</string>
    <string name="login_success">로그인에 성공했습니다.</string>
    <string name="login_fail">로그인에 실패하였습니다.</string>
    <string name="auto_login_success">자동 로그인되었습니다.</string>
    <string name="menu_main_home">홈</string>
    <string name="menu_main_search">검색</string>
    <string name="menu_main_gallery">갤러리</string>
    <string name="selected_menu">selected_menu</string>
    <string name="unselected_menu">unselected_menu</string>
    <string name="repositories">Repositories</string>
    <string name="dialog_repo_add_repo_name">Repo Name</string>
    <string name="dialog_repo_add_repo_name_hint">Repo 이름을 입력하세요.</string>
    <string name="dialog_repo_add_author">Author</string>
    <string name="dialog_repo_add_author_hint">작성자를 입력하세요.</string>
    <string name="dialog_repo_add_save">SAVE</string>
    <string name="menu_main_my_page">MY</string>
    <string name="logout">LOGOUT</string>
    <string name="dialog_logout_to_logout">로그아웃하시겠습니까?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="my_page">My Page</string>
    <string name="menu_main_repo">REPO</string>
    <string name="server_communication_on_failure">서버와 통신이 원활하지 않습니다.</string>
    <string name="search_check">검색</string>
    <string name="sign_up_id_waring">영문, 숫자가 포함된 6~10글자 이내의 ID를 입력하세요.</string>
    <string name="dialog_loading">Loading...</string>
    <string name="my_page_image_select">이미지 선택하기</string>
    <string name="gallery_not_select_image">이미지를 선택하지 않았습니다.</string>
    <string name="dialog_upload_music_title">Title</string>
    <string name="dialog_upload_music_title_hint">제목을 입력하세요.</string>
    <string name="dialog_upload_music_singer">Singer</string>
    <string name="dialog_upload_music_singer_hint">가수 정보를 입력하세요.</string>
    <string name="dialog_upload_music_upload">UPLOAD</string>
    <string name="dialog_upload_music_image_select">사진 선택</string>
    <string name="user_name">%s %s</string>
    <string name="ui_state_false">UiState False</string>
    <string name="sign_up_pw_waring">영문, 숫자, 특수문자가 포함된 6~12글자 이내의 PW를 입력하세요.</string>
</resources>