<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_main_home" />
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_main_search" />
    <item
        android:id="@+id/menu_gallery"
        android:icon="@drawable/ic_gallery"
        android:title="@string/menu_main_gallery" />
    <item
        android:id="@+id/menu_repositories"
        android:icon="@drawable/ic_repositories"
        android:title="@string/menu_main_repo" />
    <item
        android:id="@+id/menu_my_page"
        android:icon="@drawable/ic_my"
        android:title="@string/menu_main_my_page" />
</menu>