<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/welcome_to_go_android"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/id"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

    <EditText
        android:id="@+id/et_login_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/id_hint"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="@+id/tv_login_id"
        app:layout_constraintStart_toStartOf="@+id/tv_login_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_id" />

    <TextView
        android:id="@+id/tv_login_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/pw"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/et_login_id"
        app:layout_constraintStart_toStartOf="@+id/et_login_id"
        app:layout_constraintTop_toBottomOf="@+id/et_login_id" />

    <EditText
        android:id="@+id/et_login_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/pw_hint"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="@+id/tv_login_pw"
        app:layout_constraintStart_toStartOf="@+id/tv_login_pw"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_pw" />

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingVertical="10dp"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/et_login_pw"
        app:layout_constraintStart_toStartOf="@+id/et_login_pw"
        app:layout_constraintTop_toBottomOf="@+id/et_login_pw" />

    <Button
        android:id="@+id/btn_login_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingVertical="10dp"
        android:text="@string/sign_up"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_login_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_login" />

</androidx.constraintlayout.widget.ConstraintLayout>