<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="30dp"
    android:padding="30dp">

    <TextView
        android:id="@+id/tv_dialog_repo_add_repo_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_repo_add_repo_name"
        android:textAppearance="?textAppearanceHeadlineMedium"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_dialog_repo_add_repo_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/dialog_repo_add_repo_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAppearance="?textAppearanceBodyLarge"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_repo_add_repo_name" />

    <TextView
        android:id="@+id/tv_dialog_repo_add_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/dialog_repo_add_author"
        android:textAppearance="?textAppearanceHeadlineMedium"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_dialog_repo_add_repo_name" />

    <EditText
        android:id="@+id/et_dialog_repo_add_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/dialog_repo_add_author_hint"
        android:importantForAutofill="no"
        android:textAppearance="?textAppearanceBodyLarge"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_repo_add_author" />

    <Button
        android:id="@+id/btn_dialog_repo_add_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:paddingVertical="10dp"
        android:text="@string/dialog_repo_add_save"
        android:textAppearance="?textAppearanceHeadlineSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_dialog_repo_add_author" />

</androidx.constraintlayout.widget.ConstraintLayout>