<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.android.go.sopt.presentation.music.MusicViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:padding="30dp">

        <TextView
            android:id="@+id/tv_dialog_upload_music_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_upload_music_title"
            android:textAppearance="?textAppearanceHeadlineMedium"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_dialog_upload_music_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/dialog_upload_music_title_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={viewModel.title}"
            android:textAppearance="?textAppearanceBodyLarge"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_upload_music_title" />

        <TextView
            android:id="@+id/tv_dialog_upload_music_singer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/dialog_upload_music_singer"
            android:textAppearance="?textAppearanceHeadlineMedium"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_dialog_upload_music_title" />

        <EditText
            android:id="@+id/et_dialog_upload_music_singer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/dialog_upload_music_singer_hint"
            android:importantForAutofill="no"
            android:text="@={viewModel.singer}"
            android:textAppearance="?textAppearanceBodyLarge"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_upload_music_singer" />

        <ImageView
            android:id="@+id/iv_dialog_upload_music_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_dialog_upload_music_save"
            app:layout_constraintEnd_toStartOf="@+id/btn_dialog_upload_music_select_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_dialog_upload_music_singer"
            tools:src="@drawable/ic_launcher_foreground" />

        <Button
            android:id="@+id/btn_dialog_upload_music_select_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingVertical="10dp"
            android:text="@string/dialog_upload_music_image_select"
            android:textAppearance="?textAppearanceHeadlineSmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_dialog_upload_music_singer" />

        <Button
            android:id="@+id/btn_dialog_upload_music_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:paddingVertical="10dp"
            android:text="@string/dialog_upload_music_upload"
            android:textAppearance="?textAppearanceHeadlineSmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_dialog_upload_music_select_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>