<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.android.go.sopt.presentation.sign.SignViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="30dp"
        tools:context=".presentation.sign.SignInActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/btn_sign_in_login">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_sign_in_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:text="@string/welcome_to_go_android"
                        android:textAppearance="?textAppearanceDisplayLarge"
                        android:textColor="?attr/colorOnBackground"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_sign_in_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:text="@string/id"
                        android:textAppearance="?textAppearanceHeadlineMedium"
                        android:textColor="?attr/colorOnBackground"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_title" />

                    <EditText
                        android:id="@+id/et_sign_in_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/id_hint"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:text="@={viewModel.id}"
                        android:textAppearance="?textAppearanceBodyLarge"
                        android:textColor="?attr/colorOnBackground"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_id" />

                    <TextView
                        android:id="@+id/tv_sign_in_pw"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/pw"
                        android:textAppearance="?textAppearanceHeadlineMedium"
                        android:textColor="?attr/colorOnBackground"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_sign_in_id" />

                    <EditText
                        android:id="@+id/et_sign_in_pw"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="30dp"
                        android:hint="@string/pw_hint"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:text="@={viewModel.pw}"
                        android:textAppearance="?textAppearanceBodyLarge"
                        android:textColor="?attr/colorOnBackground"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_pw" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

            <Button
                android:id="@+id/btn_sign_in_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="@{()->viewModel.signIn()}"
                android:paddingVertical="10dp"
                android:text="@string/login"
                android:textAppearance="?textAppearanceHeadlineSmall"
                app:layout_constraintBottom_toTopOf="@+id/btn_sign_in_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_sign_in_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/sign_up"
                android:textAppearance="?textAppearanceHeadlineSmall"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>